Add crude version of GuiDynamicCrosshairHud class.

--- a/My Projects/Alux3D/buildFiles/VisualStudio 2008/projects/Alux3D.vcproj
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2008/projects/Alux3D.vcproj
@@ -337,7 +337,7 @@
 				Name="source"
 				Filter="">
 				<File
-				   RelativePath="..\..\..\..\..\Engine\source\main\main.cpp">
+				   RelativePath="D:\Alux3D\Engine\source\main\main.cpp">
 				</File>
 			</Filter>
 		</Filter>
