--- a/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/squish.vcxproj
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/squish.vcxproj
@@ -46,13 +46,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">squish_DEBUG</TargetName>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">D:/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">squish_OPTIMIZEDDEBUG</TargetName>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">squish</TargetName>
   </PropertyGroup>
@@ -61,7 +61,7 @@
       <AdditionalOptions>/MP %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Disabled</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>../../../../../Engine/lib/squish;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:/Alux3D/Engine/lib/squish;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_DEBUG;TORQUE_DEBUG_GUARD;D3D_DEBUG_INFO;TORQUE_NET_STATS;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -98,7 +98,7 @@
       <Optimization>Full</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>../../../../../Engine/lib/squish;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:/Alux3D/Engine/lib/squish;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_DEBUG;TORQUE_DEBUG_GUARD;D3D_DEBUG_INFO;TORQUE_NET_STATS;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -134,7 +134,7 @@
       <AdditionalOptions>/MP %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Full</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>../../../../../Engine/lib/squish;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:/Alux3D/Engine/lib/squish;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -167,122 +167,122 @@
 
                
                
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\squish\alpha.cpp" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\squish\alpha.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\alpha.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\alpha.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\squish\clusterfit.cpp" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\squish\clusterfit.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\clusterfit.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\clusterfit.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\squish\colourblock.cpp" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\squish\colourblock.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\colourblock.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\colourblock.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\squish\colourfit.cpp" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\squish\colourfit.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\colourfit.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\colourfit.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\squish\colourset.cpp" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\squish\colourset.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\colourset.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\colourset.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\config.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\config.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\squish\maths.cpp" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\squish\maths.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\maths.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\maths.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\squish\rangefit.cpp" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\squish\rangefit.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\rangefit.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\rangefit.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\simd.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\simd.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\simd_float.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\simd_float.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\simd_sse.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\simd_sse.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\simd_ve.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\simd_ve.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\squish\singlecolourfit.cpp" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\squish\singlecolourfit.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\singlecolourfit.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\singlecolourfit.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\singlecolourlookup.inl" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\singlecolourlookup.inl" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\squish\squish.cpp" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\squish\squish.cpp" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\squish\squish.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\squish\squish.h" />      
 			         
 			      
    
