--- a/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/libogg.vcxproj.filters
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/libogg.vcxproj.filters
@@ -2,17 +2,17 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
    <ItemGroup>
       <Filter Include="Source Files">
-         <UniqueIdentifier>{6a72f478-5078-4700-b12b-3b2b850badc0}</UniqueIdentifier>
+         <UniqueIdentifier>{be66808d-a480-4d83-964e-9f868df497aa}</UniqueIdentifier>
          <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat;cc</Extensions>
       </Filter>
       <Filter Include="Source Files\lib">
-         <UniqueIdentifier>{8d8c867f-b57f-404f-a093-b9e493ac912e}</UniqueIdentifier>
+         <UniqueIdentifier>{203b3f11-2c29-40ac-a00d-4fc8a70b1c34}</UniqueIdentifier>
       </Filter>
       <Filter Include="Source Files\lib\include">
-         <UniqueIdentifier>{4d7bf4e8-9a4d-4e4a-a7d9-89ddde20414e}</UniqueIdentifier>
+         <UniqueIdentifier>{9e32116a-56de-4d0f-9841-0b33871339c9}</UniqueIdentifier>
       </Filter>
       <Filter Include="Source Files\lib\src">
-         <UniqueIdentifier>{f8234bdb-655a-4d29-aea6-c78c56d50c07}</UniqueIdentifier>
+         <UniqueIdentifier>{f541290e-2cfd-4b3f-9f85-ca86771fb928}</UniqueIdentifier>
       </Filter>
    </ItemGroup>
   <ItemGroup>
@@ -21,18 +21,18 @@
     </ResourceCompile>
   </ItemGroup>
    <ItemGroup>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libogg\src\bitwise.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libogg\src\bitwise.c">
          <Filter>Source Files\lib\src</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libogg\src\framing.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libogg\src\framing.c">
          <Filter>Source Files\lib\src</Filter>
       </ClCompile>
    </ItemGroup>
    <ItemGroup>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libogg\include\ogg\ogg.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libogg\include\ogg\ogg.h">
          <Filter>Source Files\lib\include</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libogg\include\ogg\os_types.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libogg\include\ogg\os_types.h">
          <Filter>Source Files\lib\include</Filter>
       </ClInclude>
    </ItemGroup>
