--- a/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/libvorbis.vcxproj.filters
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/libvorbis.vcxproj.filters
@@ -2,32 +2,32 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
    <ItemGroup>
       <Filter Include="Source Files">
-         <UniqueIdentifier>{d826d2e9-1fb8-4398-a2af-91f90415b394}</UniqueIdentifier>
+         <UniqueIdentifier>{555c1e1a-a68e-4e35-8ebf-533fe41e3fe1}</UniqueIdentifier>
          <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat;cc</Extensions>
       </Filter>
       <Filter Include="Source Files\lib">
-         <UniqueIdentifier>{4be38951-5ea6-4179-bb8f-9dec2d66466b}</UniqueIdentifier>
+         <UniqueIdentifier>{36fd8ae7-7e24-45a9-90f5-16d7e5544cb6}</UniqueIdentifier>
       </Filter>
       <Filter Include="Source Files\lib\include">
-         <UniqueIdentifier>{b5766b55-6590-4cf4-b2e4-6fdb19705321}</UniqueIdentifier>
+         <UniqueIdentifier>{2ba5fbf6-4226-48a3-b0a3-2dc783ca5056}</UniqueIdentifier>
       </Filter>
       <Filter Include="Source Files\lib\lib">
-         <UniqueIdentifier>{b409a608-9acb-424b-9950-80955c00a5b3}</UniqueIdentifier>
+         <UniqueIdentifier>{058844c6-5f90-4151-b262-089d540e3636}</UniqueIdentifier>
       </Filter>
       <Filter Include="Source Files\lib\lib\books">
-         <UniqueIdentifier>{93549cef-5913-4ba9-8a25-a0f72afab240}</UniqueIdentifier>
+         <UniqueIdentifier>{14d6848a-6f45-4746-b25a-ed69829a5839}</UniqueIdentifier>
       </Filter>
       <Filter Include="Source Files\lib\lib\books\coupled">
-         <UniqueIdentifier>{8f3b75c4-e90c-4082-8660-27fe2418c602}</UniqueIdentifier>
+         <UniqueIdentifier>{2b2e0967-1bfc-485e-8c2b-c7b51359c09c}</UniqueIdentifier>
       </Filter>
       <Filter Include="Source Files\lib\lib\books\floor">
-         <UniqueIdentifier>{e5e24f99-8772-4471-a99d-8ec2492aba51}</UniqueIdentifier>
+         <UniqueIdentifier>{47e37e2d-63cb-4240-a357-b00ff3858197}</UniqueIdentifier>
       </Filter>
       <Filter Include="Source Files\lib\lib\books\uncoupled">
-         <UniqueIdentifier>{15959ac6-22af-46e4-8db4-16a0b3383e5d}</UniqueIdentifier>
+         <UniqueIdentifier>{6b533499-86b7-464e-8bf4-4ee9826eee6e}</UniqueIdentifier>
       </Filter>
       <Filter Include="Source Files\lib\lib\modes">
-         <UniqueIdentifier>{e5a8b012-e652-46c6-ac2f-09a811b0610c}</UniqueIdentifier>
+         <UniqueIdentifier>{6d793085-b86b-4e53-8cdd-1df3479f7aa4}</UniqueIdentifier>
       </Filter>
    </ItemGroup>
   <ItemGroup>
@@ -36,207 +36,207 @@
     </ResourceCompile>
   </ItemGroup>
    <ItemGroup>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\analysis.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\analysis.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\bitrate.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\bitrate.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\block.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\block.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\codebook.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\codebook.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\envelope.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\envelope.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\floor0.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\floor0.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\floor1.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\floor1.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\info.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\info.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\lookup.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\lookup.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\lpc.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\lpc.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\lsp.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\lsp.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\mapping0.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\mapping0.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\mdct.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\mdct.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\psy.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\psy.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\registry.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\registry.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\res0.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\res0.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\sharedbook.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\sharedbook.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\smallft.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\smallft.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\synthesis.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\synthesis.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\vorbisenc.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\vorbisenc.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\vorbisfile.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\vorbisfile.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
-      <ClCompile Include="..\..\..\..\..\Engine\lib\libvorbis\lib\window.c">
+      <ClCompile Include="D:\Alux3D\Engine\lib\libvorbis\lib\window.c">
          <Filter>Source Files\lib\lib</Filter>
       </ClCompile>
    </ItemGroup>
    <ItemGroup>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\include\vorbis\codec.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\include\vorbis\codec.h">
          <Filter>Source Files\lib\include</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\include\vorbis\vorbisenc.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\include\vorbis\vorbisenc.h">
          <Filter>Source Files\lib\include</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\include\vorbis\vorbisfile.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\include\vorbis\vorbisfile.h">
          <Filter>Source Files\lib\include</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\backends.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\backends.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\bitrate.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\bitrate.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\codebook.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\codebook.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\codec_internal.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\codec_internal.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\envelope.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\envelope.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\highlevel.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\highlevel.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\lookup.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\lookup.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\lookup_data.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\lookup_data.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\lpc.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\lpc.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\lsp.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\lsp.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\masking.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\masking.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\mdct.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\mdct.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\misc.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\misc.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\os.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\os.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\psy.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\psy.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\registry.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\registry.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\scales.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\scales.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\smallft.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\smallft.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\window.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\window.h">
          <Filter>Source Files\lib\lib</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\books\coupled\res_books_51.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\books\coupled\res_books_51.h">
          <Filter>Source Files\lib\lib\books\coupled</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\books\coupled\res_books_stereo.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\books\coupled\res_books_stereo.h">
          <Filter>Source Files\lib\lib\books\coupled</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\books\floor\floor_books.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\books\floor\floor_books.h">
          <Filter>Source Files\lib\lib\books\floor</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\books\uncoupled\res_books_uncoupled.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\books\uncoupled\res_books_uncoupled.h">
          <Filter>Source Files\lib\lib\books\uncoupled</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\floor_all.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\floor_all.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\psych_11.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\psych_11.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\psych_16.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\psych_16.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\psych_44.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\psych_44.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\psych_8.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\psych_8.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\residue_16.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\residue_16.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\residue_44.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\residue_44.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\residue_44p51.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\residue_44p51.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\residue_44u.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\residue_44u.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\residue_8.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\residue_8.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\setup_11.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\setup_11.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\setup_16.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\setup_16.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\setup_22.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\setup_22.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\setup_32.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\setup_32.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\setup_44.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\setup_44.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\setup_44p51.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\setup_44p51.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\setup_44u.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\setup_44u.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\setup_8.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\setup_8.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
-      <ClInclude Include="..\..\..\..\..\Engine\lib\libvorbis\lib\modes\setup_X.h">
+      <ClInclude Include="D:\Alux3D\Engine\lib\libvorbis\lib\modes\setup_X.h">
          <Filter>Source Files\lib\lib\modes</Filter>
       </ClInclude>
    </ItemGroup>
