--- a/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/lpng.vcxproj
+++ b/My Projects/Alux3D/buildFiles/VisualStudio 2010/projects/lpng.vcxproj
@@ -46,13 +46,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">lpng_DEBUG</TargetName>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">D:/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Optimized Debug|Win32'">lpng_OPTIMIZEDDEBUG</TargetName>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../../../../../Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:/Alux3D/Engine/lib//compiled/$(Configuration).$(Platform)/</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../../Link/VC2010.$(Configuration).$(PlatformName)/$(ProjectName)/</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">lpng</TargetName>
   </PropertyGroup>
@@ -61,7 +61,7 @@
       <AdditionalOptions>/MP %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Disabled</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>../../../../../Engine/lib/zlib;../../../../../Engine/lib/lpng;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:/Alux3D/Engine/lib/zlib;D:/Alux3D/Engine/lib/lpng;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_DEBUG;TORQUE_DEBUG_GUARD;D3D_DEBUG_INFO;TORQUE_NET_STATS;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -98,7 +98,7 @@
       <Optimization>Full</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>../../../../../Engine/lib/zlib;../../../../../Engine/lib/lpng;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:/Alux3D/Engine/lib/zlib;D:/Alux3D/Engine/lib/lpng;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>TORQUE_DEBUG;TORQUE_DEBUG_GUARD;D3D_DEBUG_INFO;TORQUE_NET_STATS;UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -134,7 +134,7 @@
       <AdditionalOptions>/MP %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Full</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>../../../../../Engine/lib/zlib;../../../../../Engine/lib/lpng;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:/Alux3D/Engine/lib/zlib;D:/Alux3D/Engine/lib/lpng;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>UNICODE;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -167,122 +167,122 @@
 
                
                
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\example.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\example.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\png.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\png.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\lpng\png.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\lpng\png.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\lpng\pngconf.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\lpng\pngconf.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\lpng\pngdebug.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\lpng\pngdebug.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngerror.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngerror.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngget.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngget.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\lpng\pnginfo.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\lpng\pnginfo.h" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\lpng\pnglibconf.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\lpng\pnglibconf.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngmem.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngmem.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngpread.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngpread.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\lpng\pngpriv.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\lpng\pngpriv.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngread.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngread.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngrio.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngrio.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngrtran.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngrtran.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngrutil.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngrutil.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngset.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngset.c" />      
 			         
 			      
    
       
-               			                     <ClInclude Include="..\..\..\..\..\Engine\lib\lpng\pngstruct.h" />      
+               			                     <ClInclude Include="D:\Alux3D\Engine\lib\lpng\pngstruct.h" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngtest.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngtest.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngtrans.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngtrans.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngwio.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngwio.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngwrite.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngwrite.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngwtran.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngwtran.c" />      
 			         
 			      
    
       
-               			                     <ClCompile Include="..\..\..\..\..\Engine\lib\lpng\pngwutil.c" />      
+               			                     <ClCompile Include="D:\Alux3D\Engine\lib\lpng\pngwutil.c" />      
 			         
 			      
    
